# project-CobraCoders02

./: .gitattributes  .gitignore  .pylintrc  README.md  addressbook.pkl  notes.pkl  pyproject.toml  requirements.txt  run-cobra.cmd  run-cobra.ps1
app/: input_parser.py  main.py  message_texts.py  messages.py  storage.py  validators.py
app/decorators/: __init__.py  colored_output.py  input_error.py  output_formatter.py  validate_args.py
app/handlers/: __init__.py  add_address.py  add_birthday.py  add_contact.py  add_email.py  add_note.py  birthdays.py  change_contact.py  delete_contact.py  delete_note.py  edit_note.py  execute_command.py  search_contacts.py  search_notes.py  search_tag.py  show_address.py  show_all.py  show_birthday.py  show_email.py  show_notes.py  show_phone.py  sort_notes.py
app/models/: __init__.py  address.py  address_book.py  birthday.py  email.py  exceptions.py  field.py  name.py  note.py  notes_book.py  phone.py  record.py  tag.py
