[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobra-contact-assistant"
version = "0.1.0"
description = "COBRA CLI contact and notes assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama",
]

[project.scripts]
cobra = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true
